Realm to Firebase (groups and friends)

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ iOSInjectionProject/
 !*.xcodeproj/xcshareddata/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+
+GoogleService-Info.plist
